--- a/templates/schema.html
+++ b/templates/schema.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CA-Dialogue-Tagger</title>
+    <title>CA-Dialogue-Tagger-Schema</title>
     <link rel="stylesheet" href='../static/styles/main.css' />
     <script src="{{ url_for('static', filename='js/jquery-3.4.0.min.js') }}"></script>
-    <!--<script src="../static/js/jquery-3.4.0.min.js"></script> For Local Dev -->
+    <script src="../static/js/jquery-3.4.0.min.js"></script><!-- For Local Dev -->
 </head>
-<body id="index">
+<body id="schema">
     <!-- Navigation Bar -->
     <div id="nav-bar"></div>
 
     <!-- Content -->
     <div class="container">
-        <h1 class="title">Conversation Analysis Dialogue Tagger</h1>
+        <h1 class="title">Schema</h1>
         <p>Blah alskdfjlaksjdf a;lsdkfj</p>
     </div>
 
