--- a/templates/nav-bar.html
+++ b/templates/nav-bar.html
@@ -1,28 +1,25 @@
 <div id="nav-menu">
     <img src="../static/images/nd_logo.png" alt="ND Logo" width="60" height="60">
     <ul>
-      <li id="index" ><a href="/">Home</a></li>
-      <li id="schema" ><a href="/Schema">Schema</a></li>
-      <li id="practice" ><a href="/Practice">Practice</a></li>
-      <li id="help" ><a href="/Help">Help</a></li>
+        <li id="index"><a href="/">Home</a></li>
+        <li id="schema"><a href="/Schema">Schema</a></li>
+        <li id="practice"><a href="/Practice">Practice</a></li>
+        <li id="help"><a href="/Help">Help</a></li>
     </ul>
 </div>
 
 <script>
     jQuery(function () {
-        var page = document.body.id;
-        //console.log("page is ", page);
+        var current_page = document.body.id;
+        //console.log("Current page is ", current_page);
         //var list = document.getElementById("nav-menu").getElementsByTagName("li");
-        //console.log(list)
-        jQuery('#nav-menu li').each(function (i, v) {
-          var current = jQuery(this).attr('id');
-          //console.log("list item is ", current);
-          if (page == current) {
-            jQuery(this).addClass('active');
-          }
-          else {
-              jQuery(this).removeClass('active');
-          }
+        jQuery('#nav-menu li').each(function () {
+            var menu_item = jQuery(this).attr('id');
+            if (current_page === menu_item) {
+                jQuery(this).addClass('active');
+            } else {
+                jQuery(this).removeClass('active');
+            }
         });
         return false;
     });
