--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
 <div class="content-container">
-    <h1 class="title">Schema</h1>
+    <h1 class="title">Conversation Analysis Dialogue Tagger</h1>
     <p>Blah alskdfjlaksjdf a;lsdkfj</p>
 </div>
