--- a/templates/practice.html
+++ b/templates/practice.html
@@ -1,26 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CA-Dialogue-Tagger-Practice</title>
-    <link rel="stylesheet" href='../static/styles/main.css'/>
-    <script src="{{ url_for('static', filename='js/jquery-3.4.0.min.js') }}"></script>
-    <script src="../static/js/jquery-3.4.0.min.js"></script><!-- For Local Dev -->
-</head>
-<body id="practice">
-<!-- Navigation Bar -->
-<div id="nav-bar"></div>
-
-<!-- Content -->
-<div class="container">
+<div class="content-container">
     <h1 class="title">Practice</h1>
     <p>Blah alskdfjlaksjdf a;lsdkfj</p>
 </div>
-
-<script>
-    $(function () {
-        $("#nav-bar").load("/nav-bar");
-    });
-</script>
-</body>
-</html>
