--- a/templates/practice.html
+++ b/templates/practice.html
@@ -1,4 +1,2 @@
-<div class="content-container">
-    <h1 class="title">Practice</h1>
-    <p>Blah alskdfjlaksjdf a;lsdkfj</p>
-</div>
+<h1 class="title">Practice</h1>
+<p>Blah Blah</p>
