--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,4 +1,6 @@
-@import 'nav-bar.css';
+@import "nav-bar.css";
+@import "dialogue-view.css";
+
 :root {
     --main-bg-color: whitesmoke;
     --main-font: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
@@ -7,12 +9,16 @@
     --menu-bg-color: #24292e;
     --menu-border-color: #48525c;
 
+    --dialogue-view-menu-bg-color: #48525c;
+    --dialogue-view-btn-border-color: #48525c;
+
     --index-color: #0366d6;
     --schema-color: green;
     --practice-color: purple;
     --help-color: orange;
 
-    --max-content-width: 1500px
+    --max-content-width: 1500px;
+    --min-content-width: 1000px;
 }
 
 body {
@@ -35,7 +41,7 @@ body {
 }
 
 p {
-    text-align: center;
+    /*text-align: center;*/
     font-family: var(--main-font);
     font-size: 16px;
 }
