--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,2 @@
-<div class="content-container">
-    <h1 class="title">Conversation Analysis Dialogue Tagger</h1>
-    <p>Blah alskdfjlaksjdf a;lsdkfj</p>
-</div>
+<h1 class="title">Conversation Analysis Dialogue Tagger</h1>
+<p>{{ myexample }}</p>
