--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href='../static/styles/main.css'/>
     <script src="{{ url_for('static', filename='js/jquery-3.4.0.min.js') }}"></script>
     <!--<script src="../static/js/jquery-3.4.0.min.js"></script> For Local Dev -->
+    <script src="{{ url_for('static', filename='js/create-view-functions.js') }}"></script>
 </head>
 <body onload="loadContent()">
 
@@ -14,33 +15,33 @@
     <div id="nav-menu">
         <img src="../static/images/nd_logo.png" alt="ND Logo" width="60" height="60">
         <ul>
-            <li id="home" class="active-menu-btn" onclick="navBtnClick(this)"><p>Home</p></li>
+            <li id="home" class="active-nav-menu-btn" onclick="navBtnClick(this)"><p>Home</p></li>
             <li id="schema" onclick="navBtnClick(this)"><p>Schema</p></li>
             <li id="practice" onclick="navBtnClick(this)"><p>Practice</p></li>
-            <li id="help" onclick="navBtnClick(this)"><p>Help</p></li>
+            <li id="annotate" onclick="navBtnClick(this)"><p>Annotate</p></li>
         </ul>
     </div>
 </div>
 
 <!-- Content -->
-<div id="content"></div>
+<div id="content" class="content-container"></div>
 
 <script>
 
     function navBtnClick(clickedBtn) {
         // Remove current active-menu-btn class
-        var current = document.getElementsByClassName("active-menu-btn")[0];
-        current.classList.remove("active-menu-btn");
-        
+        var current = document.getElementsByClassName("active-nav-menu-btn")[0];
+        current.classList.remove("active-nav-menu-btn");
+
         // Set this one to active
-        clickedBtn.className = "active-menu-btn";
+        clickedBtn.className = "active-nav-menu-btn";
 
         // Load the content div
         loadContent(clickedBtn.id);
     }
 
     function loadContent(content) {
-        // On fiest page load content will be undefined
+        // On first page load content will be undefined
         if (typeof content == "undefined"){
             $("#content").load("/home");
         }
