--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,2 @@
 <h1 class="title">Conversation Analysis Dialogue Tagger</h1>
-<p>{{ myexample }}</p>
+<p class="title-paragraph">{{ myexample }}</p>
