--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href='../static/styles/main.css'/>
     <script src="{{ url_for('static', filename='js/jquery-3.4.0.min.js') }}"></script>
     <!--<script src="../static/js/jquery-3.4.0.min.js"></script> For Local Dev -->
-    <script src="{{ url_for('static', filename='js/create-view-functions.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/view-utilities.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/view-actions.js') }}"></script>
 </head>
 <body onload="loadContent()">
 
