--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -29,19 +29,26 @@ body {
     max-width: var(--max-content-width);
     margin-right: auto;
     margin-left: auto;
+    font-family: var(--main-font);
 }
 
 .title {
     color: var(--title-font-color);
     text-align: center;
-    font-family: var(--main-font);
     font-size: 54px;
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+}
+
+h1, h2, h3, h4 {
+
+}
+
+.title-paragraph {
+    text-align: center;
+    font-size: 16px;
 }
 
 p {
-    /*text-align: center;*/
-    font-family: var(--main-font);
     font-size: 16px;
 }
