--- a/templates/schema.html
+++ b/templates/schema.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="text-content">
     <h1 class="title" id="conversation-analysis-schema">Conversation Analysis Schema</h1>
 
     <h1 id="overview">Overview</h1>
