--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -24,31 +24,31 @@
 body {
     background-color: whitesmoke;
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .content-container {
-    height: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 64px;
     font-family: var(--main-font);
     font-size: 16px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
-.content {
+.text-content {
     max-width: var(--max-content-width);
-    margin: 5%;
+    margin: 0 5%;
 }
 
 .title {
     color: var(--title-font-color);
     text-align: center;
     font-size: 54px;
-    margin-top: 100px;
     margin-bottom: 50px;
 }
 
 .title-paragraph {
     text-align: center;
 }
-
