--- a/templates/annotate.html
+++ b/templates/annotate.html
@@ -1,22 +1,21 @@
-<div id="dialogue-view">
-    <div id="dialogue-view-bar">
-        <div id="dialogue-view-menu">
-            <ul>
-                <li><p>Save</p></li>
-                <li><p>Clear</p></li>
-            </ul>
-        </div>
+<div id="dialogue-view-bar">
+    <div id="dialogue-view-menu">
+        <ul>
+            <li><p>Save</p></li>
+            <li><p>Clear</p></li>
+        </ul>
     </div>
-    <div id="dialogue-view-utterances">
+</div>
 
-    </div>
-    <div id="dialogue-view-buttons">
+<div id="dialogue-view-utterances">
 
-    </div>
+</div>
+<div id="dialogue-view-buttons">
+
 </div>
 
 
 <script>
-    buildDialogueViewUtterances(document.getElementById("dialogue-view-utterances"));
-    buildDialogueViewButtonBars(document.getElementById("dialogue-view-buttons"));
+    buildDialogueViewUtterances(document.getElementById(dialogue_view_utt_node));
+    buildDialogueViewButtonBars(document.getElementById(dialogue_view_btn_bar_node));
 </script>
