--- a/templates/annotate.html
+++ b/templates/annotate.html
@@ -1,8 +1,19 @@
 <div id="dialogue-view-bar">
     <div id="dialogue-view-menu">
+
         <ul>
+            <li>
+                <button id="prev-btn" class="prev-next-btn" onclick="prev_btn_click(this)">
+                    <img src="../static/images/prev.png" alt="Previous" width="50" height="50">
+                </button>
+            </li>
             <li><p>Save</p></li>
             <li><p>Clear</p></li>
+            <li>
+                <button id="next-btn" class="prev-next-btn" onclick="next_btn_click(this)">
+                    <img src="../static/images/next.png" alt="Next" width="50" height="50">
+                </button>
+            </li>
         </ul>
     </div>
 </div>
