--- a/static/styles/dialogue-view.css
+++ b/static/styles/dialogue-view.css
@@ -38,6 +38,11 @@
 
 .prev-next-btn {
     margin: 0 10px;
+    cursor: pointer;
+}
+
+.prev-next-btn img {
+    display: block;
 }
 
 /* Utterance View */
@@ -79,8 +84,8 @@
 }
 
 .utt-btn.current {
-    border-color: blue;
-    background-color: blue;
+    border-color: #0366d6;;
+    background-color: #0366d6;;
     color: white;
 }
 
