--- a/templates/schema.html
+++ b/templates/schema.html
@@ -1,6 +1,5 @@
-<div class="text-content">
-    <h1 class="title" id="conversation-analysis-schema">Conversation Analysis Schema</h1>
-
+<h1 class="title" id="conversation-analysis-schema">Conversation Analysis Schema</h1>
+<div class="content">
     <h1 id="overview">Overview</h1>
     <p>The Conversation Analysis (CA) schema aims to defines a domain agnostic
         annotation scheme for dialogue that is aligned with the relevant theories from
