--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -6,16 +6,13 @@
     --main-font: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     --title-font-color: #0366d6;
 
-    --menu-bg-color: #24292e;
-    --menu-border-color: #48525c;
+    --my-dark-grey: #24292e;
+    --my-mid-grey: #48525c;
 
-    --dialogue-view-menu-bg-color: #48525c;
-    --dialogue-view-btn-border-color: #48525c;
-
-    --index-color: #0366d6;
-    --schema-color: green;
-    --practice-color: purple;
-    --help-color: orange;
+    --my-blue-color: #0366d6;
+    --my-green-color: green;
+    --my-purple-color: purple;
+    --my-orange-color: orange;
 
     --max-content-width: 1500px;
     --min-content-width: 1000px;
@@ -37,11 +34,6 @@ body {
     flex-direction: column;
 }
 
-.text-content {
-    max-width: var(--max-content-width);
-    margin: 0 5%;
-}
-
 .title {
     color: var(--title-font-color);
     text-align: center;
@@ -51,4 +43,31 @@ body {
 
 .title-paragraph {
     text-align: center;
+}
+
+.content {
+    max-width: var(--max-content-width);
+    padding: 0 5%;
+    margin: 0 auto auto;
+}
+
+.login-out-btn {
+    margin: auto;
+}
+
+button {
+    display: block;
+    margin: 2px 5px;
+    font-family: var(--main-font);
+    font-size: 16px;
+    background-color: white;
+    border-radius: 4px;
+    border: 1px solid var(--my-mid-grey);
+    transition-duration: 0.3s;
+}
+
+button:hover {
+    border-color: lightblue;
+    background-color: lightblue;
+    color: black;
 }
