--- a/static/styles/nav-bar.css
+++ b/static/styles/nav-bar.css
@@ -1,5 +1,5 @@
 #nav-bar {
-    background-color: var(--menu-bg-color);
+    background-color: var(--my-dark-grey);
     height: 64px;
     width: 100%;
 }
@@ -30,7 +30,7 @@
     display: inline-block;
     box-sizing: border-box;
     border-bottom: 4px solid transparent;
-    border-right: 1px solid var(--menu-border-color);
+    border-right: 1px solid var(--my-mid-grey);
     transition-duration: 0.3s;
     cursor:pointer;
 }
@@ -52,33 +52,33 @@
 
 /*Nav button colors*/
 #nav-menu #home.active-nav-menu-btn {
-    border-bottom: 4px solid var(--index-color);
+    border-bottom: 4px solid var(--my-blue-color);
 }
 
 #nav-menu #home:hover {
-    border-bottom: 4px solid var(--index-color);
+    border-bottom: 4px solid var(--my-blue-color);
 }
 
 #nav-menu #schema.active-nav-menu-btn {
-    border-bottom: 4px solid var(--schema-color);
+    border-bottom: 4px solid var(--my-green-color);
 }
 
 #nav-menu #schema:hover {
-    border-bottom: 4px solid var(--schema-color);
+    border-bottom: 4px solid var(--my-green-color);
 }
 
 #nav-menu #practice.active-nav-menu-btn {
-    border-bottom: 4px solid var(--practice-color);
+    border-bottom: 4px solid var(--my-purple-color);
 }
 
 #nav-menu #practice:hover {
-    border-bottom: 4px solid var(--practice-color);
+    border-bottom: 4px solid var(--my-purple-color);
 }
 
 #nav-menu #annotate.active-nav-menu-btn {
-    border-bottom: 4px solid var(--help-color);
+    border-bottom: 4px solid var(--my-orange-color);
 }
 
 #nav-menu #annotate:hover {
-    border-bottom: 4px solid var(--help-color);
+    border-bottom: 4px solid var(--my-orange-color);
 }
