--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,18 @@
 <h1 class="title">Conversation Analysis Dialogue Tagger</h1>
-<p class="title-paragraph">
+<p class="title-paragraph">Blah Blah</p>
 
-Blah Blah
+<div class="content">
+    {% if message %}
+        <p>{{ message }}</p>
+    {% endif %}
+    {% if not current_user.is_authenticated %}
 
-</p>
-<div class="text-content">
-{% if message %}
-    {{ message }}
-{% endif %}
-{% if not current_user.is_authenticated %}
-
-    <form id="login_form" action="javascript:login()">
-        <p><label for="username">User Name: </label><input id="user_name" type=text name="username" value="" /></p>
-        <p><button onclick="login()">Start</button></p>
-    </form>
+        <form id="login_form" action="javascript:login()">
+            <p><input id="user_name" type=text name="username" value=""/></p>
+            <p><button class="login-out-btn" onclick="login()">Start</button></p>
+        </form>
 
     {% else %}
-    logout/start
-{% endif %}
+        <button class="login-out-btn" onclick="logout()">Logout</button>
+    {% endif %}
 </div>
