--- a/templates/index.html
+++ b/templates/index.html
@@ -16,40 +16,16 @@
     <div id="nav-menu">
         <img src="../static/images/nd_logo.png" alt="ND Logo" width="60" height="60">
         <ul>
-            <li id="home" class="active-nav-menu-btn" onclick="navBtnClick(this)"><p>Home</p></li>
-            <li id="schema" onclick="navBtnClick(this)"><p>Schema</p></li>
-            <li id="practice" onclick="navBtnClick(this)"><p>Practice</p></li>
-            <li id="annotate" onclick="navBtnClick(this)"><p>Annotate</p></li>
+            <li id="home" class="active-nav-menu-btn" onclick="loadContent(this.id)"><p>Home</p></li>
+            <li id="schema" onclick="loadContent(this.id)"><p>Schema</p></li>
+            <li id="practice" onclick="loadContent(this.id)"><p>Practice</p></li>
+            <li id="annotate" onclick="loadContent(this.id)"><p>Annotate</p></li>
         </ul>
     </div>
 </div>
 
 <!-- Content -->
-<div id="content" class="content-container"></div>
+<div id="content-container" class="content-container"></div>
 
-<script>
-
-    function navBtnClick(clickedBtn) {
-        // Remove current active-menu-btn class
-        var current = document.getElementsByClassName("active-nav-menu-btn")[0];
-        current.classList.remove("active-nav-menu-btn");
-
-        // Set this one to active
-        clickedBtn.className = "active-nav-menu-btn";
-
-        // Load the content div
-        loadContent(clickedBtn.id);
-    }
-
-    function loadContent(content) {
-        // On first page load content will be undefined
-        if (typeof content == "undefined"){
-            $("#content").load("/home");
-        }
-        else{
-            $("#content").load("/" + content);
-        }
-    }
-</script>
 </body>
 </html>
