Finish Login/out

--- a/static/styles/dialogue-view.css
+++ b/static/styles/dialogue-view.css
@@ -113,6 +113,8 @@
 
 .clear-btn:hover {
     opacity: 1;
+    border: 2px solid #e74c3c;
+    background-color: whitesmoke;
 }
 
 .clear-btn:active {
