--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -3,7 +3,7 @@
 
 :root {
     --main-bg-color: whitesmoke;
-    --main-font: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    --main-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --title-font-color: #0366d6;
 
     --my-dark-grey: #24292e;
@@ -51,8 +51,17 @@ body {
     margin: 0 auto auto;
 }
 
+input[type=text] {
+    width: 200px;
+    padding: 10px 10px;
+    margin: 5px auto;
+    box-sizing: border-box;
+    border-radius: 4px;
+    border: 1px solid var(--my-mid-grey);
+}
+
 .login-out-btn {
-    margin: auto;
+    margin: 5px auto;
 }
 
 button {
