--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 
         <form id="login_form" action="javascript:login()">
             <label for="username">Login ID{% if message %}&emsp;{{ message }}{% endif %}</label><br>
-            <input id="user_name" type=text name="username" value=""/>
+            <input id="user-name" type=text name="username" value=""/>
             <button class="login-out-btn">Start</button>
         </form>
 
