--- a/templates/annotate.html
+++ b/templates/annotate.html
@@ -1,6 +1,5 @@
 <div id="dialogue-view-bar">
     <div id="dialogue-view-menu">
-
         <ul>
             <li>
                 <button id="prev-btn" class="prev-next-btn" onclick="prevBtnClick(this)">
@@ -8,7 +7,7 @@
                 </button>
             </li>
             <li>
-                <p>Dialogue Set:&nbsp</p>
+                <p>Set:&nbsp</p>
                 <p id="dataset-lbl"></p>
             </li>
             <li>
@@ -35,8 +34,3 @@
 <div id="dialogue-view-buttons">
 
 </div>
-
-<script>
-    buildDialogueViewUtterances(document.getElementById(dialogueViewUttNode));
-    buildDialogueViewButtonBars(document.getElementById(dialogueViewBtnBarNode));
-</script>
