--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
     <script src="{{ url_for('static', filename='js/view-controller.js') }}"></script>
     <script src="{{ url_for('static', filename='js/utilities.js') }}"></script>
 </head>
-<body id="body" onload="loadContent()">
+<body id="body">
 
 <!-- Navigation Bar -->
 <div id="nav-bar">
     <div id="nav-menu">
         <img src="../static/images/nd_logo.png" alt="ND Logo" width="60" height="60">
         <ul>
-            <li id="home" class="active-nav-menu-btn" onclick="loadContent(this.id)"><p>Home</p></li>
+            <li id="home" onclick="loadContent(this.id)"><p>Home</p></li>
             <li id="schema" onclick="loadContent(this.id)"><p>Schema</p></li>
             <li id="practice" onclick="loadContent(this.id)"><p>Practice</p></li>
             <li id="annotate" onclick="loadContent(this.id)"><p>Annotate</p></li>
@@ -25,7 +25,6 @@
 </div>
 
 <!-- Content -->
-<div id="content-container" class="content-container"></div>
-
+<div id="main-content-container" class="content-container"></div>
 </body>
 </html>
