Removed Current Dialogue Variable from Model

--- a/templates/schema.html
+++ b/templates/schema.html
@@ -24,8 +24,7 @@
 
     <p>&emsp;B: You driving or walking? &emsp;&emsp;&emsp;&emsp; <strong>FPP-insert</strong></p>
 
-    <p>&emsp;A: Walking.&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>SPP-insert</strong>
-    </p>
+    <p>&emsp;A: Walking.&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>SPP-insert</strong></p>
 
     <p>B: Get on the subway. &emsp;&emsp;&emsp;&emsp;&emsp;<strong>SPP-base</strong></p>
 
@@ -45,8 +44,7 @@
 
     <p>&emsp;B: You driving or walking? &emsp;&emsp;&emsp;&emsp;<strong>FPP-insert - choiceQuestion</strong></p>
 
-    <p>&emsp;A: Walking.&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>SPP-insert -
-        answer</strong></p>
+    <p>&emsp;A: Walking.&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<strong>SPP-insert - answer</strong></p>
 
     <p>B: Get on the subway. &emsp;&emsp;&emsp;&emsp;&emsp;<strong>SPP-base - answer</strong></p>
 
@@ -95,7 +93,7 @@
 
     <p><a href="#information-providing-functions">Information-providing Functions</a></p>
 
-    <p>&emsp; <a href="#inform">inform</a></p>
+    <p>&emsp; <a href="#inform-statement">inform (Statement)</a></p>
 
     <p>&emsp; <a href="#answer">answer</a></p>
 
@@ -375,7 +373,7 @@
 
     <h2 id="information-providing-functions">Information-providing Functions</h2>
 
-    <h3 id="inform">inform</h3>
+    <h3 id="inform-statement">inform (Statement)</h3>
 
     <p>Communicative function of a dialogue act performed by the sender, S, in order to
         make the information contained in the semantic content known to the addressee,
