--- a/static/styles/dialogue-view.css
+++ b/static/styles/dialogue-view.css
@@ -67,13 +67,13 @@
     margin: 2px auto;
 }
 
-.utt-btn.labeled {
+.utt-btn.labelled {
     border-color: var(--my-green-color);
     background-color: var(--my-green-color);
     color: white;
 }
 
-.utt-btn.current {
+.utt-btn.selected {
     border-color: var(--my-blue-color);
     background-color: var(--my-blue-color);
     color: white;
