--- a/static/styles/dialogue-view.css
+++ b/static/styles/dialogue-view.css
@@ -79,38 +79,27 @@
     color: white;
 }
 
-.ap-label-container {
-    max-width: 100px;
-    min-width: 100px;
-    margin: 2px 10px;
-    text-align: center;
-    font-weight: bold;
-}
-
-.da-label-container {
-    max-width: 150px;
-    min-width: 150px;
+.label-container{
+    width:120px;
+    min-width: 120px;
     margin: 2px 10px;
     text-align: center;
     font-weight: bold;
 }
 
 .clear-btn {
-    width: 20px;
-    height: 20px;
-    padding-left: 1px;
-    margin: 2px 10px;
-    font-family: initial;
-    border: 2px solid #e74c3c;
-    border-radius: 2px;
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    background-image: url("../images/delete_square.png");
+    background-size: cover;
     background-color: whitesmoke;
-    opacity: 0.6;
-    transition-duration: 0.3s;
+    border: none;
+    opacity: 0.7;
 }
 
 .clear-btn:hover {
     opacity: 1;
-    border: 2px solid #e74c3c;
     background-color: whitesmoke;
 }
 
