--- a/static/styles/dialogue-view.css
+++ b/static/styles/dialogue-view.css
@@ -28,7 +28,7 @@
     transition: 0.1s;
 }
 
-#dialogue-view-menu li p {
+#dialogue-view-menu li label {
     color: white;
     text-decoration: none;
     font-family: var(--main-font);
@@ -43,21 +43,21 @@
 }
 
 /* Utterance View */
-#dialogue-view-utterances {
+.utterance-view {
     max-width: var(--max-content-width);
-    /*min-width: var(--min-content-width);*/
+    min-width: var(--min-content-width);
     margin-top: auto;
     margin-right: auto;
     margin-left: auto;
     display: flex;
 }
 
-#utterance-list {
+.utterance-list {
     list-style: none;
     padding: 0;
 }
 
-#utterance-list li {
+.utterance-list li {
     display: flex;
     align-items: center;
 }
@@ -107,8 +107,8 @@
     transform: translateY(2px);
 }
 
-/* Dialogue View Buttons */
-#dialogue-view-buttons {
+/* Dialogue View Label Buttons */
+.label-buttons {
     background-color: var(--my-mid-grey);
     margin-top: auto;
 }
