--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <script src="{{ url_for('static', filename='js/jquery-3.4.0.min.js') }}"></script>
     <!--<script src="../static/js/jquery-3.4.0.min.js"></script> For Local Dev -->
     <script src="{{ url_for('static', filename='js/view-controller.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/questionnaire-controller.js') }}"></script>
     <script src="{{ url_for('static', filename='js/utilities.js') }}"></script>
 </head>
 <body id="body">
