--- a/templates/annotate.html
+++ b/templates/annotate.html
@@ -81,7 +81,7 @@
             </div>
 
             <!-- Questionnaire Utterances -->
-            <div id="questionnaire-view-utterances" class="utterance-view"></div>
+            <div id="questionnaire-view-utterances" class="questionnaire-utterance-view"></div>
         </div>
     </div>
 
