--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -2,6 +2,7 @@
 @import "dialogue-view.css";
 @import "range-slider.css";
 @import "questionnaire-popup.css";
+
 :root {
     --main-bg-color: whitesmoke;
     --main-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -22,15 +23,17 @@
 body {
     background-color: whitesmoke;
     margin: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+    overflow: hidden;
 }
 
 .content-container {
     font-family: var(--main-font);
     font-size: 16px;
-    flex: 1;
+    position: absolute;
+    top: 64px;
+    right: 0;
+    left: 0;
+    bottom: 0;
     display: flex;
     flex-direction: column;
 }
