--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -55,7 +55,7 @@ body {
     margin: 0 auto auto;
 }
 
-/* TODO only necessary for questionnaire? */
+/* TODO only necessary for questionnaire header? */
 h2 {
     margin-block-start: 0.75em;
     line-height: 28px;
