--- a/static/styles/questionnaire-popup.css
+++ b/static/styles/questionnaire-popup.css
@@ -101,3 +101,23 @@
     display: flex;
     align-items: center;
 }
+
+.qst-utt-lbl {
+    max-width: 800px;
+    margin: 2px auto;
+    text-align: center;
+}
+
+.qst-label-btn {
+    min-width: 130px;
+    max-width: 130px;
+    margin: 2px 10px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.qst-label-btn.selected {
+    border-color: var(--my-blue-color);
+    background-color: var(--my-blue-color);
+    color: white;
+}
